Schema changes. Analyse refferences editor

--- a/PatientRecordsModule/Themes/Generic.xaml
+++ b/PatientRecordsModule/Themes/Generic.xaml
@@ -10,5 +10,6 @@
         <ResourceDictionary Source="../Views/Diagnoses/ComplicationsTreeView.xaml" />
         <ResourceDictionary Source="../Views/Analyses/AnalyseCreateView.xaml" />
         <ResourceDictionary Source="../Views/Analyses/AnalyseProtocolView.xaml" />
+        <ResourceDictionary Source="../Views/Analyses/AnalyseRefferencesView.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
