--- a/PatientSearchModule/Views/PatientSearchView.xaml
+++ b/PatientSearchModule/Views/PatientSearchView.xaml
@@ -5,6 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:viewModels="clr-namespace:PatientSearchModule.ViewModels"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf"
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300"
@@ -20,6 +22,9 @@
                 <TextBlock Text="Начните вводить любое имя, номер документа или дату для поиска пациента"
                            Style="{x:Null}" />
             </xctk:WatermarkTextBox.Watermark>
+            <i:Interaction.Behaviors>
+                <behaviors:DependentCollectionNavigationBehavior DependentItemsControl="{Binding ElementName=listBox}" />
+            </i:Interaction.Behaviors>
         </xctk:WatermarkTextBox>
         <Grid HorizontalAlignment="Stretch"
               VerticalAlignment="Stretch">
@@ -30,7 +35,16 @@
                      Background="{x:Null}"
                      ItemsSource="{Binding Patients}"
                      HorizontalContentAlignment="Stretch"
-                     IsSynchronizedWithCurrentItem="True" />
+                     IsSynchronizedWithCurrentItem="True" 
+                     x:Name="listBox"
+                     FocusVisualStyle="{x:Null}">
+                <ListBox.Resources>
+                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}"
+                                     Color="DarkBlue" />
+                    <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}"
+                                     Color="DarkBlue" />
+                </ListBox.Resources>
+            </ListBox>
             <ContentControl Content="{Binding BusyMediator}"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Stretch" />
